force-app/main/default/objects/MUSW__Proceeding2__c/MUSW__Proceeding2__c.object-meta.xml
<CustomObject>
    <label>Proceeding</label>
    <nameField>
        <label>Proceeding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proceedings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>