force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Agenda_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Agenda_Close_Date__c</fullName>
    <description>The last available date that an item can be added to the Agenda of a Proceeding.</description>
    <label>Agenda Close Date</label>
    <type>Date</type>
</CustomField>