force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Availability__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Availability__c</fullName>
    <formula>IF(AND(MUSW__Scheduled_Agenda_Items__c &lt; MUSW__Maximum_Agenda_Items__c, MUSW__Agenda_Close_Date__c &gt;= TODAY()),&quot;Open&quot;,
IF(MUSW__Scheduled_Agenda_Items__c &gt;= MUSW__Maximum_Agenda_Items__c, &quot;Agenda Full&quot;,&quot;Agenda Closed&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability</label>
    <type>Text</type>
</CustomField>