force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Maximum_Agenda_Items__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Maximum_Agenda_Items__c</fullName>
    <label>Maximum Agenda Items</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>