force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Proceeding_Body__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Proceeding_Body__c</fullName>
    <label>Proceeding Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Proceeding_Bodies</valueSetName>
    </valueSet>
</CustomField>