force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Scheduled_Agenda_Items__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_Agenda_Items__c</fullName>
    <label>Scheduled Agenda Items</label>
    <summaryForeignKey>MUSW__Proceeding_Agenda_Item__c.MUSW__Proceeding__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>