force-app/main/default/objects/MUSW__Proceeding2__c/fields/MUSW__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>