force-app/main/default/objects/MUSW__Proceeding2__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Proceeding_Body__c</columns>
    <columns>MUSW__Scheduled_Date__c</columns>
    <columns>MUSW__Maximum_Agenda_Items__c</columns>
    <columns>MUSW__Scheduled_Agenda_Items__c</columns>
    <columns>MUSW__Agenda_Close_Date__c</columns>
    <columns>MUSW__Availability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>